set min-height CSS for sidebar to align product listing columns correctly in the case of zero taxons

--- a/core/public/stylesheets/screen.css
+++ b/core/public/stylesheets/screen.css
@@ -287,6 +287,7 @@ body.two-col #wrapper { background-image: url(../images/wrapper-back-2.png); }
   display: inline;
   float: left;
   width: 150px;
+  min-height: 100px;
   margin-right: 10px;
   padding-right: 24px;
   margin-right: 25px;
